[package]
name = "saveres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rand = "0.8.5"
rand_distr = "0.4.3"
noise = "0.8.2"
rayon = "1.7.0"
serde = "1.0.159"
serde_json = "1.0.95"
moonshine-save = { version = "0.1.2", path = "/Users/salt/external/moonshine_save" }